e-commerce/cloth-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloth-app-service
  labels:
    app: cloth-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cloth-app
  type: ClusterIP
