e-commerce/cloth-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloth-app-ingress
  labels:
    app: cloth-app
spec:
  ingressClassName: nginx
  rules:
    - host: cloth.cbz.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-app-service
              port:
                number: 80
